[ci] Use integer value of rather than new integer